--- a/src/schemas/system.yaml
+++ b/src/schemas/system.yaml
@@ -1,211 +1,157 @@
 $schema: http://json-schema.org/draft-07/schema#
-title: System State Schema
-description: Schema for system state in visual novel engine
+title: System Actions Schema
+description: System commands and actions for visual novel engine
 type: object
 properties:
-  pendingEffects:
-    type: array
-    description: Array of pending effects to be processed
-    items:
-      type: object
-      properties:
-        name:
-          type: string
-          description: Name of the effect
-          enum:
-            [
-              render,
-              systemInstructions,
-              cancelTimerEffect,
-              updateLocalVariables,
-              saveVnData,
-            ]
-        options:
-          type: object
-          description: Options for the effect
-          properties:
-            delay:
-              type: number
-              description: Delay in milliseconds
-              minimum: 0
-            systemInstructions:
-              type: object
-              description: System instructions to execute
-              additionalProperties: true
-            variables:
-              type: object
-              description: Variables to update
-              additionalProperties: true
-            saveData:
-              type: array
-              description: Save data to persist
-              items:
-                type: object
-          additionalProperties: false
-      required: [name]
-      additionalProperties: false
-
-  variables:
+  nextLine:
     type: object
-    description: Runtime variables storage
-    additionalProperties: true
-
-  saveData:
-    type: array
-    description: Game save data
-    items:
-      type: object
-      properties:
-        id:
-          type: string
-          description: Unique identifier for the save
-        slotIndex:
-          type: number
-          description: Save slot index
-          minimum: 0
-        pointer:
-          $ref: "#/definitions/Pointer"
-          description: Pointer state at time of save
-        history:
-          $ref: "#/definitions/History"
-          description: History state at time of save
-      required: [id, slotIndex, pointer, history]
-      additionalProperties: false
-
-  story:
-    type: object
-    description: Main story state
+    description: Advance to next line
     properties:
-      lastLineAction:
-        type: string
-        description: Last action performed on a line
-        enum: [nextLine, prevLine]
-
-      dialogueUIHidden:
+      forceSkipAutonext:
         type: boolean
-        description: Whether dialogue UI is hidden
+        description: Force skip auto-next behavior
         default: false
-
-      currentPointer:
-        type: string
-        description: Currently active pointer mode
-        enum: [read, menu, history, title]
-        default: read
-
-      autoNext:
-        type: object
-        description: Auto-next configuration
-        properties:
-          nextTrigger:
-            type: string
-            description: When to trigger auto-next
-            enum: [onComplete, fromComplete, manual]
-          delay:
-            type: number
-            description: Delay in milliseconds
-            minimum: 0
-          delayAfterComplete:
-            type: number
-            description: Delay after completion
-            minimum: 0
-          preventManual:
-            type: boolean
-            description: Whether to prevent manual advancement
-            default: false
-        required: [nextTrigger]
-        additionalProperties: false
-
-      autoMode:
-        type: boolean
-        description: Whether auto mode is enabled
-        default: false
-
-      skipMode:
-        type: boolean
-        description: Whether skip mode is enabled
-        default: false
-
-      historyEntryIndex:
-        type: number
-        description: Current index in history entries
-        minimum: 0
-
-      pointers:
-        type: object
-        description: Collection of navigation pointers
-        properties:
-          read:
-            $ref: "#/definitions/Pointer"
-            description: Reading mode pointer
-          menu:
-            $ref: "#/definitions/Pointer"
-            description: Menu mode pointer
-          history:
-            allOf:
-              - $ref: "#/definitions/Pointer"
-              - type: object
-                properties:
-                  historyEntryIndex:
-                    type: number
-                    description: Index in history entries
-                    minimum: 0
-            description: History mode pointer
-          title:
-            $ref: "#/definitions/Pointer"
-            description: Title screen pointer
-        required: [read, menu, history]
-        additionalProperties: false
-
-      history:
-        $ref: "#/definitions/History"
-        description: Story progression history
-
-    required:
-      [dialogueUIHidden, currentPointer, autoMode, skipMode, pointers, history]
     additionalProperties: false
 
-required: [pendingEffects, variables, saveData, story]
-additionalProperties: false
-
-definitions:
-  Pointer:
+  prevLine:
     type: object
-    description: Navigation pointer for different modes
+    description: Go to previous line
+    additionalProperties: false
+
+  goToSectionScene:
+    type: object
+    description: Navigate to specific scene/section
     properties:
-      presetId:
-        type: string
-        description: Current preset ID
       sectionId:
         type: string
-        description: Current section ID
-      lineId:
-        type: string
-        description: Current line ID
+        description: Target section ID
       sceneId:
         type: string
-        description: Current scene ID (optional)
+        description: Target scene ID (optional)
+      mode:
+        type: string
+        description: Navigation mode
+        enum: [read, menu, history, title]
+      presetId:
+        type: string
+        description: Preset to use after navigation
     additionalProperties: false
 
-  History:
+  updateVariable:
     type: object
-    description: Story progression history
+    description: Update game variables
     properties:
-      entries:
+      operations:
         type: array
-        description: Array of history entries
+        description: Array of variable operations to perform
         items:
           type: object
           properties:
-            sectionId:
+            variableId:
               type: string
-              description: Section ID for this history entry
-            lineId:
+              description: ID of the variable to update
+            op:
               type: string
-              description: Line ID for this history entry (optional)
-            sceneId:
-              type: string
-              description: Scene ID for this history entry (optional)
-          required: [sectionId]
+              description: Operation to perform on the variable
+              enum: [set, add, subtract, multiply, divide, increment, decrement]
+            value:
+              description: Value to use in the operation
+              oneOf:
+                - type: string
+                - type: number
+                - type: boolean
+          required: [variableId, op]
           additionalProperties: false
-    required: [entries]
+        minItems: 1
+    required: [operations]
     additionalProperties: false
+
+  setPreset:
+    type: object
+    description: Set the current preset for event handling
+    properties:
+      presetId:
+        type: string
+        description: ID of the preset to activate
+    required: [presetId]
+    additionalProperties: false
+
+  clearCurrentMode:
+    type: object
+    description: Clear current mode and switch to a new one
+    properties:
+      mode:
+        type: string
+        description: Mode to switch to
+        enum: [read, menu, history, title]
+    required: [mode]
+    additionalProperties: false
+
+  startAutoMode:
+    type: object
+    description: Start auto-advance mode
+    additionalProperties: false
+
+  stopAutoMode:
+    type: object
+    description: Stop auto-advance mode
+    additionalProperties: false
+
+  toggleAutoMode:
+    type: object
+    description: Toggle auto-advance mode on/off
+    additionalProperties: false
+
+  startSkipMode:
+    type: object
+    description: Start skip mode for fast-forwarding
+    additionalProperties: false
+
+  stopSkipMode:
+    type: object
+    description: Stop skip mode
+    additionalProperties: false
+
+  toggleSkipMode:
+    type: object
+    description: Toggle skip mode on/off
+    additionalProperties: false
+
+  toggleDialogueUIHidden:
+    type: object
+    description: Toggle visibility of dialogue UI elements
+    additionalProperties: false
+
+  saveVnData:
+    type: object
+    description: Save current game state to a slot
+    properties:
+      slotIndex:
+        type: number
+        description: Save slot index to save to
+        minimum: 0
+    required: [slotIndex]
+    additionalProperties: false
+
+  loadVnData:
+    type: object
+    description: Load game state from a save slot
+    properties:
+      slotIndex:
+        type: number
+        description: Save slot index to load from
+        minimum: 0
+    required: [slotIndex]
+    additionalProperties: false
+
+  lineCompleted:
+    type: object
+    description: Handle completion of a line (internal action)
+    additionalProperties: false
+
+  clearPendingEffects:
+    type: object
+    description: Clear all pending effects (internal action)
+    additionalProperties: false
+
+additionalProperties: false
