--- a/vt/specs/background/animation-2.yaml
+++ b/vt/specs/background/animation-2.yaml
@@ -1,5 +1,6 @@
 ---
 title: "Animation 2"
+description: test both in and out animation at same time
 ---
 screen:
   width: 1920
@@ -30,16 +31,15 @@ resources:
         alpha:
           initialValue: 0
           keyframes:
-            - duration: 700
+            - duration: 2000
               value: 1
               easing: linear
     8h3js:
       name: "Fade Out"
       properties:
         alpha:
-          initialValue: 1
           keyframes:
-            - duration: 700
+            - duration: 2000
               value: 0
               easing: linear
 story:
@@ -59,14 +59,16 @@ story:
                   resourceId: alkejf3la
                   resourceType: image
                   animations:
-                    in: 3lkj289
+                    in:
+                      animationId: 3lkj289
             - id: line2
               presentation:
                 background:
-                  resourceId: alkejf3la
+                  resourceId: 3ljdasfjlk32
                   resourceType: image
-            - id: line3
-              presentation:
-                background:
-                  resourceId: alkejf3la
-                  resourceType: image
+                  animations:
+                    in:
+                      animationId: 3lkj289
+                    out:
+                      animationId: 8h3js
+                      resourceId: alkejf3la
