--- a/rettangoli.config.yaml
+++ b/rettangoli.config.yaml
@@ -16,12 +16,10 @@ vt:
     - title: "Element Types"
       type: "groupLabel"
       items:
-        - title: "Basic"
-          files: "basic"
         - title: "Background"
           files: "background"
-        - title: "GoToSectionScene"
-          files: "goToSceneSection"
+        - title: "SectionTransition"
+          files: "sectionTransition"
         - title: "Visual"
           files: "visual"
         - title: "Character"
@@ -30,8 +28,6 @@ vt:
           files: "dialogue"
         - title: "Choice"
           files: "choice"
-        - title: "Animation"
-          files: "animation"
         - title: "Complete"
           files: "complete"
         - title: "Layout"
