--- a/src/schemas/projectData/presets.yaml
+++ b/src/schemas/projectData/presets.yaml
@@ -36,7 +36,7 @@ patternProperties:
                     description: Go to previous line
                     additionalProperties: false
 
-                  goToSectionScene:
+                  sectionTransition:
                     type: object
                     description: Navigate to specific scene/section
                     properties:
