--- a/vt/specs/background/backgroundId.yaml
+++ b/vt/specs/background/backgroundId.yaml
@@ -12,7 +12,7 @@ presets:
     name: Read
     eventsMap:
       LeftClick:
-        systemActions:
+        system:
           nextLine: {}
 
 resources:
